--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </head>
 <body>
 
-<div id="overlay">Klik di mana saja untuk mulai musik 🎵</div>
+<div id="overlay"></div>
 
 <div class="container">
   <h1>Perilisan Libur</h1>
