--- a/index.html
+++ b/index.html
@@ -13,24 +13,27 @@
       font-family: "Outfit", sans-serif;
     }
 
-    body {
+    html, body {
+      width: 100%;
       min-height: 100vh;
       background: linear-gradient(160deg, #4c1d95 0%, #7e22ce 50%, #a78bfa 100%);
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
       color: #f5f3ff;
-      text-align: center;
+      display: flex;
       flex-direction: column;
-      overflow: hidden;
-      position: relative;
-      padding: 40px 20px 0;
+      justify-content: space-between;
+      text-align: center;
+      overflow-x: hidden;
     }
 
     main {
+      flex-grow: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 60px 20px 40px;
       z-index: 2;
       animation: fadeIn 1.2s ease;
-      max-width: 90%;
     }
 
     h1 {
@@ -41,7 +44,6 @@
       -webkit-text-fill-color: transparent;
       text-shadow: 0 0 15px rgba(255,255,255,0.15);
       margin-bottom: 14px;
-      will-change: transform, opacity;
     }
 
     p {
@@ -51,7 +53,6 @@
       line-height: 1.6;
       margin-bottom: 25px;
       padding: 0 10px;
-      will-change: transform, opacity;
     }
 
     .btn {
@@ -64,7 +65,6 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.08);
       transition: all 0.3s ease;
       display: inline-block;
-      margin-bottom: 40px;
     }
 
     .btn:hover {
@@ -78,46 +78,49 @@
       display: flex;
       justify-content: center;
       align-items: flex-end;
+      margin-top: 30px;
+      padding-bottom: 0;
     }
 
-    img {
-      width: min(85%, 420px);
+    footer img {
+      width: min(90%, 450px);
       height: auto;
-      opacity: 0;
-      border-radius: 20px 20px 0 0;
+      border-radius: 25px 25px 0 0;
       filter: drop-shadow(0 0 10px rgba(255,255,255,0.2));
       object-fit: contain;
-      margin-bottom: -4px;
-      transition: opacity 1s ease;
-      will-change: opacity;
-    }
-
-    img.loaded {
-      opacity: 0.9;
+      display: block;
+      margin-bottom: -5px;
     }
 
     .aura {
       position: absolute;
-      width: 400px;
-      height: 400px;
-      background: radial-gradient(circle, rgba(255,255,255,0.08) 0%, transparent 70%);
-      filter: blur(60px);
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, rgba(255,255,255,0.07) 0%, transparent 70%);
+      filter: blur(50px);
       z-index: 0;
+      pointer-events: none;
     }
 
     .aura:nth-child(1) {
-      top: -120px;
-      left: -100px;
+      top: -80px;
+      left: -60px;
     }
 
     .aura:nth-child(2) {
-      bottom: -120px;
-      right: -100px;
+      bottom: -80px;
+      right: -60px;
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
+    }
+
+    @media (max-height: 700px) {
+      footer img {
+        width: 80%;
+      }
     }
   </style>
 </head>
@@ -133,7 +136,7 @@
   </main>
 
   <footer>
-    <img src="https://i.imgur.com/pjsLOFr.png" alt="Dynotic Logo" loading="lazy">
+    <img src="https://i.imgur.com/pjsLOFr.png" alt="Dynotic Logo">
   </footer>
 
   <audio id="bgMusic" loop>
@@ -146,11 +149,6 @@
     document.addEventListener('click', () => {
       audio.play().catch(() => {});
     }, { once: true });
-
-    const img = document.querySelector('img');
-    img.addEventListener('load', () => {
-      img.classList.add('loaded');
-    });
   </script>
 </body>
 </html>
