--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* Biarkan gambar menempel ke bawah tanpa jarak */
+    /* biar pas full di layar hp */
     body {
       display: flex;
       flex-direction: column;
-      height: 100svh; /* Gunakan unit viewport aman untuk mobile */
+      height: 100svh;
     }
 
     main {
@@ -114,7 +114,7 @@
     <h1>Dynotic Sedang Dalam Waktu Istirahat</h1>
     <p>Kami akan kembali beroperasi sesuai hari kerja dan jam operasional resmi.<br>
     Terima kasih telah memahami masa rehat kami.</p>
-    <a href="#" class="btn">Kembali ke Halaman Utama</a>
+    <a href="https://dynorelease.carrd.co/" class="btn">Kembali ke Halaman Utama</a>
   </main>
 
   <footer>
