--- a/index.html
+++ b/index.html
@@ -17,14 +17,31 @@
       width: 100%;
       height: 100%;
       min-height: 100vh;
-      overflow-x: hidden;
-      background: linear-gradient(160deg, #4c1d95 0%, #7e22ce 50%, #a78bfa 100%);
+      overflow: hidden;
       color: #f5f3ff;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       text-align: center;
+      position: relative;
+    }
+
+    /* 🌈 Aurora background */
+    body::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: linear-gradient(160deg, #4c1d95, #7e22ce, #a78bfa);
+      background-size: 400% 400%;
+      animation: aurora 12s ease-in-out infinite;
+      z-index: -2;
+    }
+
+    @keyframes aurora {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     main {
@@ -34,7 +51,7 @@
       justify-content: center;
       align-items: center;
       padding: 0 20px;
-      animation: fadeIn 1.2s ease;
+      animation: fadeInUp 1.4s ease forwards;
     }
 
     h1 {
@@ -45,6 +62,8 @@
       -webkit-text-fill-color: transparent;
       text-shadow: 0 0 15px rgba(255,255,255,0.15);
       margin-bottom: 10px;
+      opacity: 0;
+      animation: textFade 1.5s ease 0.3s forwards;
     }
 
     p {
@@ -53,8 +72,9 @@
       opacity: 0.95;
       line-height: 1.6;
       margin-bottom: 22px;
-      padding: 0 10px;
       max-width: 90%;
+      opacity: 0;
+      animation: textFade 1.5s ease 0.6s forwards;
     }
 
     .btn {
@@ -66,6 +86,8 @@
       text-decoration: none;
       box-shadow: 0 4px 10px rgba(0,0,0,0.08);
       transition: all 0.3s ease;
+      opacity: 0;
+      animation: textFade 1.5s ease 0.9s forwards;
     }
 
     .btn:hover {
@@ -80,24 +102,40 @@
       justify-content: center;
       align-items: flex-end;
       flex-shrink: 0;
+      position: relative;
+      overflow: hidden;
     }
 
     footer img {
-      width: min(95%, 480px);
+      width: min(95%, 460px);
       height: auto;
       border-radius: 20px 20px 0 0;
       filter: drop-shadow(0 0 10px rgba(255,255,255,0.25));
       object-fit: contain;
       display: block;
-      margin-bottom: -3px;
+      position: relative;
+      z-index: 1;
+      transform: translateX(0);
+      animation: floatLeftRight 6s ease-in-out infinite;
     }
 
-    @keyframes fadeIn {
+    /* ✨ Animasi */
+    @keyframes fadeInUp {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes textFade {
       from { opacity: 0; transform: translateY(10px); }
       to { opacity: 1; transform: translateY(0); }
     }
 
-    /* biar pas full di layar hp */
+    @keyframes floatLeftRight {
+      0% { transform: translateX(0); }
+      50% { transform: translateX(10px); }
+      100% { transform: translateX(0); }
+    }
+
     body {
       display: flex;
       flex-direction: column;
