--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <h1>Dynotic Sedang Dalam Waktu Istirahat</h1>
     <p>Kami akan kembali beroperasi sesuai hari kerja dan jam operasional resmi.<br>
     Terima kasih telah memahami masa rehat kami.</p>
-    <a href="https://dynorelease.carrd.co/" class="btn">Kembali ke Halaman Utama</a>
+    <a href="https://dynoticid.github.io/panel/" class="btn">Kembali ke Halaman Utama</a>
   </main>
 
   <footer>
